feat(ci): gh-pages publish both pdf and site

--- a/docs/graypaper/diploma.tex
+++ b/docs/graypaper/diploma.tex
@@ -82,10 +82,10 @@
 % Глава 2
 \newpage
 \begin{center}
-  \textbf{\large 2. Разработка и исследование }
+  \textbf{\large 2. Разработка и исследование приложения }
 \end{center}
 \refstepcounter{chapter}
-\addcontentsline{toc}{chapter}{2. Разработка и исследование }
+\addcontentsline{toc}{chapter}{2. Разработка и исследование приложения }
 
 
 % Заключение
