--- a/docs/graypaper/diploma.tex
+++ b/docs/graypaper/diploma.tex
@@ -57,7 +57,7 @@
 \begin{document}
 
 % Включение титульного листа (первая страница файла Title.pdf)
-\includepdf[pages={1}]{assets/TitlePage.pdf}
+\includepdf[pages={1-5}]{assets/TitlePage.pdf}
 
 % Аннотация, Содержание, Введение
 \renewcommand{\contentsname}{\centerline{\large СОДЕРЖАНИЕ}}
@@ -69,6 +69,14 @@
 \end{center}
 \addcontentsline{toc}{chapter}{ВВЕДЕНИЕ}
 
+Данная работа посвящена исследованию и разработке платформы для слепого инвестирования в ранние стадии стартапов, основанной на технологиях блокчейн и искусственного интеллекта. Традиционная экосистема инвестирования на ранних стадиях страдает от информационной асимметрии, предвзятости в оценке и уязвимости интеллектуальной собственности. Эти проблемы являются критическими как для основателей стартапов, так и для инвесторов.
+
+Основатели стартапов сталкиваются с существенными рисками при представлении своих идей потенциальным инвесторам, включая кражу интеллектуальной собственности или преждевременное раскрытие информации, что может поставить под угрозу их предприятия еще до получения необходимой поддержки. В то же время, инвесторы часто принимают решения, основываясь на субъективных факторах, таких как личность основателя или его социальные связи, вместо того чтобы оценивать непосредственно достоинства идеи, что приводит к неэффективному распределению капитала и упущенным возможностям.
+
+Актуальность данной работы обусловлена растущей потребностью в безопасных, прозрачных и непредвзятых инвестиционных платформах в условиях глобального развития предпринимательства. Предлагаемая платформа использует блокчейн для защиты интеллектуальной собственности и искусственный интеллект для объективной оценки, решая указанные проблемные точки и способствуя созданию более справедливой экосистемы для инноваций. Ее значимость усиливается возрастающим спросом на цифровые инструменты, которые обеспечивают защиту создателей при эффективном соединении их с капиталом.
+
+Целью данной работы является создание и исследование платформы, которая расширяет возможности инвестирования в инновации на ранней стадии, создавая справедливую и безопасную экосистему для инноваций. Для достижения этой цели в работе решаются следующие задачи: разработка механизмов безопасного управления идеями, внедрение ИИ для ранжирования идей на основе их потенциала, обеспечение возможности слепого инвестирования и создание масштабируемой экосистемы сообщества.
+
 % Глава 1
 \newpage
 \begin{center}
@@ -77,7 +85,33 @@
 \refstepcounter{chapter}
 \addcontentsline{toc}{chapter}{1. Аналитический обзор }
 
-?? \cite{nakamoto2008bitcoin} ???
+\section{Анализ целевой аудитории и проблематики}
+
+Предлагаемая платформа ориентирована на три ключевые группы пользователей, столкнувшихся с выявленными проблемами. Первая группа — создатели идей (авторы), которые представляют собой предпринимателей на предпосевной стадии. Они нуждаются в безопасной, конфиденциальной платформе для хранения, проверки и монетизации своих идей без риска раскрытия интеллектуальной собственности. Эти пользователи стремятся привлечь финансирование, не подвергая при этом опасности целостность своих концепций.
+
+Вторая группа — бизнес-ангелы (инвесторы ранних стадий), которые ищут стартапы с высоким потенциалом, но нуждаются в непредвзятых, основанных на данных аналитических материалах для принятия обоснованных решений. Они сталкиваются с проблемой субъективности оценок в традиционных системах инвестирования, что часто приводит к неоптимальному распределению капитала.
+
+Третья группа — начинающие предприниматели с умеренным опытом, которые выигрывают от среды, основанной на сообществе и лишенной предвзятости, что позволяет им совершенствовать и финансировать свои идеи. Им необходимы равные условия для конкуренции с более опытными основателями, имеющими развитые социальные связи в индустрии.
+
+Все эти группы коллективно нуждаются в решении, которое обеспечивает конфиденциальность, снижает уровень предвзятости и предоставляет надежные оценки — проблемы, которые напрямую решает предлагаемая платформа. Понимание потребностей целевой аудитории позволяет создать решение, максимально удовлетворяющее их запросы и эффективно решающее существующие проблемы в области раннего инвестирования.
+
+\section{Анализ существующих аналогов и конкурентов}
+
+В настоящее время существует ряд глобальных аналогов, которые частично решают обозначенные проблемы, однако ни один из них не предлагает комплексного решения. Kickstarter, как платформа краудфандинга, позволяет создателям публично представлять свои идеи, но не обеспечивает защиту интеллектуальной собственности и возможность слепого инвестирования, что подвергает основателей значительным рискам. AngelList соединяет стартапы с инвесторами, однако опирается на традиционные методы оценки, оставляя пространство для предвзятости и не имея механизмов приоритетной защиты конфиденциальности.
+
+Блокчейн-основанные краудфандинговые платформы (например, ICO) предлагают ликвидность через токенизацию, но отдают приоритет публичному представлению перед защитой интеллектуальной собственности, в отличие от подхода с локальным хранением, который используется в предлагаемой платформе. Стартап-инкубаторы и технологические акселераторы, хотя и предоставляют наставничество и возможности финансирования, также не уделяют должного внимания вопросам конфиденциальности, аналитике, основанной на искусственном интеллекте, и непредвзятой оценке.
+
+Анализ существующих решений показывает, что хотя экосистема продолжает развиваться, ни одна платформа не сочетает уникальные функции локального хранения интеллектуальной собственности, прозрачности блокчейна, рейтингов с поддержкой ИИ и слепых инвестиций. В глобальном масштабе аналоги решают вопросы финансирования, но упускают из виду проблемы приватности и справедливости, что позиционирует предлагаемую платформу как новаторское решение в отрасли. Такой подход открывает значительные возможности для создания принципиально нового инвестиционного инструмента, отвечающего актуальным запросам рынка.
+
+\section{Обзор технологий и механизмов}
+
+Для реализации предлагаемой платформы необходимо использование передовых технологий блокчейн и искусственного интеллекта. Блокчейн обеспечивает необходимую инфраструктуру для безопасной токенизации и хранения интеллектуальной собственности с использованием нулевых доказательств знания (zero-knowledge proofs), которые позволяют доказать владение информацией без её раскрытия. Этот механизм критически важен для обеспечения конфиденциальности идей создателей до момента совершения транзакции.
+
+Ключевым компонентом технологической структуры является интеграция Кривых Расширенного Бондинга (Augmented Bonding Curves, ABC) и Квадратичного Финансирования (Quadratic Funding, QF). Кривые ABC используются для токенизации каждой идеи, при этом цена определяется соотношением спроса и предложения. Транзакционные отчисления финансируют работу платформы, а механизм вестинга гарантирует приверженность инвесторов, повышая ликвидность и масштабируемость для широкого круга пользователей.
+
+Квадратичное Финансирование распределяет средства на основе количества уникальных контрибьюторов, стимулируя широкое участие. Это масштабирует платформу, привлекая как мелких, так и крупных инвесторов, что соответствует подходам, ориентированным на сообщество. Для анализа и ранжирования идей применяется искусственный интеллект, который оценивает их на основе рыночных трендов, оригинальности и осуществимости, предоставляя инвесторам объективные метаданные без раскрытия полного содержания идеи до момента инвестирования.
+
+Для обеспечения масштабируемости при увеличении числа пользователей (как инвесторов, так и авторов) планируется использование решений Layer 2 (например, Optimism) для более быстрых и дешевых транзакций, поддерживающих больший объем операций. Также предусматривается развертывание ИИ-агентов на децентрализованных сетях для автоматизации ранжирования и увеличения аналитических возможностей. Эти технологические компоненты в комплексе формируют инновационную экосистему, способную эффективно решать выявленные проблемы раннего инвестирования.
 
 % Глава 2
 \newpage
@@ -87,6 +121,33 @@
 \refstepcounter{chapter}
 \addcontentsline{toc}{chapter}{2. Разработка и исследование приложения }
 
+\section{Архитектура и механизмы платформы}
+
+Архитектура предлагаемой платформы представляет собой интеграцию нескольких ключевых компонентов, обеспечивающих безопасное хранение идей, их ранжирование на основе искусственного интеллекта и механизм слепого инвестирования. Центральным элементом является механизм представления идей, который начинается с их подачи создателями. Идеи токенизируются с использованием Кривых Расширенного Бондинга и хранятся локально до момента инвестирования, что обеспечивает максимальную защиту интеллектуальной собственности.
+
+Процесс функционирования платформы включает несколько последовательных этапов. После подачи идеи агенты искусственного интеллекта анализируют ее на основе рыночных тенденций, оригинальности и осуществимости, генерируя метаданные (включая ранг) для инвесторов. Эти метаданные представляют собой объективную информацию о потенциале идеи, не раскрывая при этом ее полное содержание. Инвесторы рассматривают только метаданные без доступа к деталям идеи, принимают решение о финансировании и выделяют средства, что активирует передачу идеи в публичный блокчейн-реестр. После этого Квадратичное Финансирование распределяет соответствующие средства на основе количества уникальных контрибьюторов.
+
+В отличие от традиционных платформ, где идеи публично представляются и оцениваются субъективно, предлагаемая архитектура обеспечивает сохранение конфиденциальности до момента инвестирования и использует алгоритмический подход к оценке. Это существенно снижает риски кражи интеллектуальной собственности и предвзятости в оценке идей, создавая более справедливую и безопасную экосистему для инноваций. Такая архитектура также позволяет масштабировать систему по мере роста количества пользователей и объема транзакций.
+
+\section{Алгоритмы ранжирования и распределения капитала}
+
+В основе функционирования платформы лежат два ключевых алгоритма: алгоритм ранжирования идей на основе искусственного интеллекта и алгоритм распределения капитала с использованием Квадратичного Финансирования. Алгоритм ранжирования оценивает идеи для инвесторов, используя в качестве входных данных описание идеи и рыночные данные. Процесс оценки включает извлечение ключевых слов из описания и последующее их ранжирование на основе трех основных критериев: соответствия рыночным трендам (40\%), оригинальности (30\%) и осуществимости (30\%).
+
+Конкретно, алгоритм анализирует соответствие идеи текущим секторам рынка, оценивает ее уникальность на фоне существующих решений и практическую реализуемость. Вычисляется взвешенная сумма по этим критериям, которая затем нормализуется до шкалы от 0 до 100. Результатом работы алгоритма является ранг и метаданные, предоставляемые инвесторам (например, "Оценка: 87, Технологический сектор").
+
+Алгоритм распределения капитала, основанный на Квадратичном Финансировании, использует количество уникальных инвесторов (n), базовые средства (b) и фонд соответствия (m) для определения оптимального распределения ресурсов. Процесс вычисления включает расчет вклада соответствия по формуле $m' = k \times \sqrt{n}$, где k – константа (например, 1000). Общая сумма средств определяется как $b + \min(m', m_{оставшееся})$, после чего происходит пропорциональное распределение.
+
+Эти алгоритмы обеспечивают объективную оценку идей и справедливое распределение инвестиций, устраняя предвзятость и стимулируя широкое участие в финансировании перспективных проектов. Такой подход к ранжированию и распределению капитала является инновационным и представляет собой значительное улучшение по сравнению с традиционными методами, основанными на субъективных оценках инвесторов.
+
+\section{Масштабирование и будущее развитие}
+
+Важным аспектом предлагаемой платформы является ее потенциал масштабирования для обслуживания растущего числа пользователей. В условиях постоянного увеличения количества инвесторов (ангелов) и авторов идей необходимы решения, способные обеспечить стабильную работу системы без потери производительности. Для этого планируется использование решений Layer 2, таких как Optimism, которые обеспечивают более быстрые и экономичные транзакции, поддерживая больший объем операций.
+
+Децентрализованное развертывание агентов искусственного интеллекта на сетях, таких как Exo, позволит автоматизировать процессы ранжирования и увеличить аналитические возможности платформы. Такой подход обеспечит эффективное масштабирование системы анализа идей, сохраняя при этом объективность и непредвзятость оценок. Кроме технологических решений, для успешного масштабирования платформы важна модель управления, основанная на принципах кооперативной демократии. Это позволит пользователям голосовать за распределение ресурсов, способствуя формированию доверия и вовлеченности сообщества.
+
+Будущее развитие платформы предполагает расширение функциональности за счет интеграции дополнительных блокчейн-технологий, совершенствования алгоритмов искусственного интеллекта и расширения методологии Квадратичного Финансирования. Также планируется разработка инструментов для более глубокого анализа рынка и прогнозирования потенциала идей, что повысит эффективность инвестиционных решений. Предполагается создание открытого API для интеграции с существующими экосистемами и расширения возможностей для разработчиков третьих сторон.
+
+Такой комплексный подход к масштабированию и развитию обеспечит долгосрочную устойчивость платформы и ее адаптивность к меняющимся условиям рынка и потребностям пользователей, создавая основу для формирования нового стандарта в области инвестирования в стартапы на ранних стадиях.
 
 % Заключение
 \newpage
@@ -95,6 +156,16 @@
 \end{center}
 \refstepcounter{chapter}
 \addcontentsline{toc}{chapter}{ЗАКЛЮЧЕНИЕ}
+
+Проведенное исследование и разработка платформы для слепого инвестирования в ранние стадии стартапов демонстрирует инновационный подход к решению критических проблем в области инвестирования. Предложенная платформа переопределяет взаимодействие между основателями и инвесторами, интегрируя безопасность блокчейна, аналитику искусственного интеллекта и финансирование, управляемое сообществом через механизмы Кривых Расширенного Бондинга и Квадратичного Финансирования.
+
+В рамках работы были достигнуты следующие результаты: разработан механизм защиты интеллектуальной собственности основателей через локальное хранение токенизированных идей до момента инвестирования; создан алгоритм ранжирования идей на основе искусственного интеллекта, обеспечивающий объективную оценку по ключевым параметрам (рыночные тренды, оригинальность, осуществимость); реализован механизм слепого инвестирования, минимизирующий предвзятость и концентрирующий внимание на достоинствах идеи; разработана масштабируемая экосистема сообщества с использованием технологий Layer 2 и децентрализованного искусственного интеллекта.
+
+Предложенная платформа устраняет информационную асимметрию, защищает интеллектуальную собственность и элиминирует предвзятость в оценке идей, создавая более справедливую и эффективную экосистему для инноваций. Она способна масштабироваться для обслуживания широкого круга инвесторов и основателей, обеспечивая прозрачность и доверие через механизмы кооперативной демократии и алгоритмической объективности.
+
+Дальнейшие исследования могут быть направлены на совершенствование алгоритмов искусственного интеллекта для более точной оценки потенциала идей, расширение методологии Квадратичного Финансирования для оптимизации распределения капитала и интеграцию дополнительных блокчейн-технологий для повышения безопасности и эффективности платформы. Также представляет интерес исследование моделей управления, основанных на сообществе, и их влияния на долгосрочную устойчивость инвестиционных экосистем.
+
+Таким образом, предлагаемая платформа представляет собой комплексное решение, способное трансформировать способы получения финансирования для инновационных идей и инвестирования в перспективные стартапы, создавая новый стандарт в области раннего инвестирования.
 
 % Библиографический список
 \newpage
@@ -110,5 +181,11 @@
 \end{center}
 \refstepcounter{chapter}
 \addcontentsline{toc}{chapter}{ПРИЛОЖЕНИЕ А}
+
+В данном приложении представлены дополнительные материалы, иллюстрирующие архитектуру платформы и алгоритмы, используемые для ранжирования идей и распределения капитала. Представленные диаграммы и схемы демонстрируют взаимосвязь ключевых компонентов системы и потоки данных между ними, обеспечивая целостное представление о функционировании платформы.
+
+Архитектура платформы построена на основе модульного подхода, что обеспечивает гибкость и масштабируемость системы. Основные модули включают: систему управления идеями с локальным хранением и токенизацией, модуль искусственного интеллекта для анализа и ранжирования, систему слепого инвестирования и модуль распределения капитала на основе Квадратичного Финансирования. Такая структура позволяет независимо развивать и оптимизировать отдельные компоненты системы, сохраняя при этом интегрированность и целостность всей платформы.
+
+Представленные материалы также включают псевдокод алгоритмов ранжирования идей и распределения капитала, что обеспечивает более глубокое понимание принципов функционирования платформы и возможности для дальнейшего развития и оптимизации предложенных решений. Это создает основу для практической реализации системы и ее адаптации к различным контекстам применения в области раннего инвестирования.
 
 \end{document}
