--- a/docs/graypaper/bibliography.bib
+++ b/docs/graypaper/bibliography.bib
@@ -6,3 +6,138 @@
   url     = {https://bitcoin.org/bitcoin.pdf},
   note    = {Accessed: 2023-10-01}
 }
+
+@online{buterin_website,
+  author = {Vitalik Buterin},
+  title  = {Vitalik Buterin's website},
+  year   = {2023},
+  url    = {https://vitalik.ca/},
+  note   = {Accessed: 2023-10-15}
+}
+
+@online{buterin_ai_engine,
+  author = {Vitalik Buterin},
+  title  = {AI as a process of elimination},
+  year   = {2023},
+  url    = {https://vitalik.ca/general/2023/06/09/ai_elimination.html},
+  note   = {Accessed: 2023-10-15}
+}
+
+@online{allo_capital,
+  author = {Allo},
+  title  = {Allo Capital - Decentralized Fundraising Platform},
+  year   = {2023},
+  url    = {https://allo.capital/},
+  note   = {Accessed: 2023-10-20}
+}
+
+@book{stanley2015greatness,
+  author    = {Stanley, M. and Lehman, J.},
+  title     = {Why Greatness Cannot Be Planned: The Myth of the Objective},
+  publisher = {Springer},
+  year      = {2015},
+  isbn      = {978-3319155234}
+}
+
+@book{thiel2014zero,
+  author    = {Thiel, P. and Masters, B.},
+  title     = {Zero to One: Notes on Startups, or How to Build the Future},
+  publisher = {Crown Business},
+  year      = {2014},
+  isbn      = {978-0804139298}
+}
+
+@online{dixon2018crypto,
+  author = {Dixon, C.},
+  title  = {Crypto Tokens: A Breakthrough in Open Network Design},
+  year   = {2018},
+  url    = {https://medium.com/@cdixon/crypto-tokens-a-breakthrough-in-open-network-design-e600975be2ef},
+  note   = {Accessed: 2023-09-20}
+}
+
+@article{zetzsche2018ico,
+  author  = {Zetzsche, D. A. and Buckley, R. P. and Arner, D. W. and Föhr, L.},
+  title   = {The ICO Gold Rush: It's a scam, it's a bubble, it's a super challenge for regulators},
+  journal = {University of Luxembourg Law Working Paper},
+  number  = {11/2017},
+  year    = {2018}
+}
+
+@article{goldstein2019fintech,
+  author  = {Goldstein, I. and Jiang, W. and Karolyi, G. A.},
+  title   = {To FinTech and Beyond},
+  journal = {The Review of Financial Studies},
+  volume  = {32},
+  number  = {5},
+  pages   = {1647-1661},
+  year    = {2019}
+}
+
+@book{antonopoulos2017bitcoin,
+  author    = {Antonopoulos, A. M.},
+  title     = {Mastering Bitcoin: Programming the Open Blockchain},
+  publisher = {O'Reilly Media},
+  year      = {2017},
+  isbn      = {978-1491954386}
+}
+
+@book{antonopoulos2018ethereum,
+  author    = {Antonopoulos, A. M. and Wood, G.},
+  title     = {Mastering Ethereum: Building Smart Contracts and DApps},
+  publisher = {O'Reilly Media},
+  year      = {2018},
+  isbn      = {978-1491971949}
+}
+
+@article{benet2014ipfs,
+  author  = {Benet, J.},
+  title   = {IPFS - Content Addressed, Versioned, P2P File System},
+  journal = {arXiv preprint arXiv:1407.3561},
+  year    = {2014}
+}
+
+@inproceedings{ben2014succinct,
+  author    = {Ben-Sasson, E. and Chiesa, A. and Tromer, E. and Virza, M.},
+  title     = {Succinct Non-Interactive Zero Knowledge for a von Neumann Architecture},
+  booktitle = {USENIX Security Symposium},
+  year      = {2014}
+}
+
+@article{bernstein2017attracting,
+  author  = {Bernstein, S. and Korteweg, A. and Laws, K.},
+  title   = {Attracting Early-Stage Investors: Evidence from a Randomized Field Experiment},
+  journal = {The Journal of Finance},
+  volume  = {72},
+  number  = {2},
+  pages   = {509-538},
+  year    = {2017}
+}
+
+@article{bohme2015bitcoin,
+  author  = {Böhme, R. and Christin, N. and Edelman, B. and Moore, T.},
+  title   = {Bitcoin: Economics, Technology, and Governance},
+  journal = {Journal of Economic Perspectives},
+  volume  = {29},
+  number  = {2},
+  pages   = {213-38},
+  year    = {2015}
+}
+
+@techreport{catalini2018initial,
+  author      = {Catalini, C. and Gans, J. S.},
+  title       = {Initial Coin Offerings and the Value of Crypto Tokens},
+  institution = {National Bureau of Economic Research},
+  year        = {2018},
+  number      = {24418},
+  type        = {Working Paper}
+}
+
+@article{cong2020tokenomics,
+  author  = {Cong, L. W. and Li, Y. and Wang, N.},
+  title   = {Tokenomics: Dynamic Adoption and Valuation},
+  journal = {The Review of Financial Studies},
+  volume  = {33},
+  number  = {3},
+  pages   = {1105-1155},
+  year    = {2020}
+}
