--- a/docs/graypaper/bibliography.bib
+++ b/docs/graypaper/bibliography.bib
@@ -4,7 +4,16 @@
   year    = {2008},
   journal = {Bitcoin.org},
   url     = {https://bitcoin.org/bitcoin.pdf},
-  note    = {Accessed: 2023-10-01}
+  note    = {Accessed: 2025-02-02}
+}
+
+@article{vaswani2017attention,
+  author  = {Vaswani, A. and Shazeer, N. and Parmar, N. and Uszkoreit, J. and Jones, L. and Gomez, A. N. and Kaiser, L. and Polosukhin, I.},
+  title   = {Attention Is All You Need},
+  year    = {2017},
+  journal = {arXiv preprint arXiv:1706.03762},
+  url     = {https://arxiv.org/abs/1706.03762},
+  note    = {Accessed: 2025-02-22}
 }
 
 @online{buterin_website,
@@ -12,7 +21,7 @@
   title  = {Vitalik Buterin's website},
   year   = {2023},
   url    = {https://vitalik.ca/},
-  note   = {Accessed: 2023-10-15}
+  note   = {Accessed: 2025-02-28}
 }
 
 @online{buterin_ai_engine,
@@ -20,7 +29,7 @@
   title  = {AI as a process of elimination},
   year   = {2023},
   url    = {https://vitalik.ca/general/2023/06/09/ai_elimination.html},
-  note   = {Accessed: 2023-10-15}
+  note   = {Accessed: 2025-02-03}
 }
 
 @online{allo_capital,
@@ -28,7 +37,7 @@
   title  = {Allo Capital - Decentralized Fundraising Platform},
   year   = {2023},
   url    = {https://allo.capital/},
-  note   = {Accessed: 2023-10-20}
+  note   = {Accessed: 2025-02-19}
 }
 
 @book{stanley2015greatness,
@@ -52,7 +61,7 @@
   title  = {Crypto Tokens: A Breakthrough in Open Network Design},
   year   = {2018},
   url    = {https://medium.com/@cdixon/crypto-tokens-a-breakthrough-in-open-network-design-e600975be2ef},
-  note   = {Accessed: 2023-09-20}
+  note   = {Accessed: 2025-03-01}
 }
 
 @article{zetzsche2018ico,
