--- a/docs/graypaper/diploma.tex
+++ b/docs/graypaper/diploma.tex
@@ -192,7 +192,7 @@
   \textbf{2. ТЕОРЕТИЧЕСКИЕ ОСНОВЫ МЕХАНИЗМОВ РАСПРЕДЕЛЕНИЯ РЕСУРСОВ}
   \end{center}
   \refstepcounter{chapter}
-  \addcontentsline{toc}{chapter}{2. ТЕОРЕТИЧЕСКИЕ ОСНОВЫ МЕХАНИЗМОВ распределения ресурсов}
+  \addcontentsline{toc}{chapter}{2. ТЕОРЕТИЧЕСКИЕ ОСНОВЫ МЕХАНИЗМОВ РАСПРЕДЕЛЕНИЯ РЕСУРСОВ}
 
   \section{Квадратичное финансирование как механизм оптимального распределения ресурсов}
 
@@ -340,7 +340,6 @@
   \label{fig:bpmn-diagram}
 \end{figure}
 
-В структуре диаграммы представлены три основных пула (pool), соответствующих главным категориям участников процесса: авторам идей, экспертам и инвесторам. Инвестиционный цикл инициируется в пуле авторов, где последовательно осуществляются операции формулирования и представления инновационной идеи с последующим направлением её в общий пул проектов. На данном этапе применяются криптографические протоколы защиты интеллектуальной собственности, включая доказательства с нулевым разглашением и временное закрепление данных в блокчейне, что обеспечивает авторам возможность верифицируемо подтверждать владение концепцией без избыточного раскрытия конфиденциальной информации.
 
 Информационное взаимодействие между пулом авторов и пулом экспертов осуществляется посредством асинхронных сообщений, что отражает передачу метаданных проекта без раскрытия его полного содержания. В пуле экспертов активируется комплексный подпроцесс, включающий выбор идеи из общего пула, проведение валидации представленных данных и многомерную оценку перспективности проекта. Этот этап реализуется с применением аналитического движка на основе искусственного интеллекта, который обрабатывает структурированные данные проекта с использованием ансамблевых методов машинного обучения. Диаграмма отражает ключевой шлюз (gateway) принятия решения, где эксперт формирует заключение о перспективности идеи на основе результатов аналитического движка и собственной экспертизы. Данное решение может иметь положительный или отрицательный характер, однако в обоих случаях процесс конвергирует к операции отправки оценки в общий пул, что завершает участие эксперта в текущем инвестиционном цикле.
 
